@@ -85,12 +85,17 @@ public class ComplimentService {
         List<Compliment> compliments = complimentRepository.findReceivedByMemberWithCursor(
                 memberId, cursor, PageRequest.ofSize(size));
 
+        List<Long> ids = compliments.stream().map(Compliment::getComplimentId).toList();
+        Map<Long, List<ComplimentTag>> tagMap = complimentTagRepository.findByComplimentIdIn(ids)
+                .stream()
+                .collect(Collectors.groupingBy(
+                        ComplimentTagEntity::getComplimentId,
+                        Collectors.mapping(ComplimentTagEntity::getTag, Collectors.toList())
+                ));
+
         List<ComplimentDTO> items = compliments.stream()
-                .map(c -> {
-                    List<ComplimentTag> tags = complimentTagRepository.findByComplimentId(c.getComplimentId())
-                            .stream().map(ComplimentTagEntity::getTag).toList();
-                    return toDto(c, tags);
-                }).toList();
+                .map(c -> toDto(c, tagMap.getOrDefault(c.getComplimentId(), List.of())))
+                .toList();
 
         Long nextCursor = items.size() < size
                 ? null
@@ -104,13 +109,26 @@ public class ComplimentService {
 
     @Transactional(readOnly = true)
     public Map<String, List<ComplimentDTO>> getMyMatchCompliments(Long memberId, Long matchId) {
-        List<ComplimentDTO> given = complimentRepository
-                .findByRaterIdAndMatchIdOrderByComplimentIdDesc(memberId, matchId)
-                .stream().map(c -> toDto(c, loadTags(c.getComplimentId()))).toList();
+        List<Compliment> givenList = complimentRepository
+                .findByRaterIdAndMatchIdOrderByComplimentIdDesc(memberId, matchId);
+        List<Compliment> receivedList = complimentRepository
+                .findByRateeIdAndMatchIdOrderByComplimentIdDesc(memberId, matchId);
 
-        List<ComplimentDTO> received = complimentRepository
-                .findByRateeIdAndMatchIdOrderByComplimentIdDesc(memberId, matchId)
-                .stream().map(c -> toDto(c, loadTags(c.getComplimentId()))).toList();
+        List<Long> allIds = new java.util.ArrayList<>();
+        givenList.forEach(c -> allIds.add(c.getComplimentId()));
+        receivedList.forEach(c -> allIds.add(c.getComplimentId()));
+
+        Map<Long, List<ComplimentTag>> tagMap = complimentTagRepository.findByComplimentIdIn(allIds)
+                .stream()
+                .collect(Collectors.groupingBy(
+                        ComplimentTagEntity::getComplimentId,
+                        Collectors.mapping(ComplimentTagEntity::getTag, Collectors.toList())
+                ));
+
+        List<ComplimentDTO> given = givenList.stream()
+                .map(c -> toDto(c, tagMap.getOrDefault(c.getComplimentId(), List.of()))).toList();
+        List<ComplimentDTO> received = receivedList.stream()
+                .map(c -> toDto(c, tagMap.getOrDefault(c.getComplimentId(), List.of()))).toList();
 
         return Map.of("given", given, "received", received);
     }
@@ -134,11 +152,6 @@ public class ComplimentService {
                 .totalCount(total)
                 .tagCounts(tagCounts)
                 .build();
-    }
-
-    private List<ComplimentTag> loadTags(Long complimentId) {
-        return complimentTagRepository.findByComplimentId(complimentId)
-                .stream().map(ComplimentTagEntity::getTag).toList();
     }
 
     private ComplimentDTO toDto(Compliment c, List<ComplimentTag> tags) {
